--- a/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
+++ b/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
@@ -3,73 +3,79 @@ title: Designing RAG tools for LLMs
 description: Learn how to design RAG tools using MCP for LLMs.
 ---
 
-RAG and MCP are often positioned as alternatives: RAG enables semantic searches while MCP allows API actions. However, they can be complementary:  RAG can search your knowledge base efficiently, and MCP standardizes how LLMs access that search.
+Retrieval-Augmented Generation (RAG) and the Model Context Protocol (MCP) are often positioned as alternatives — with RAG enabling semantic searches and MCP allowing API actions — but they can be complementary. You can use RAG to search your knowledge base efficiently and MCP to standardize how LLMs access that search.
 
-This guide shows you how to design RAG tools specifically for LLMs: the input patterns that work, the output structures LLMs need, and the design choices that make the difference.
+This guide shows you how to design RAG tools specifically for LLMs. It demonstrates the input patterns that work, the output structures LLMs need, and the best design choices for RAG tools.
 
-## What is RAG
+## RAG overview
 
-RAG or Retrieval-Augmented Generation is an architecture pattern for semantic search. It combines information retrieval with text generation, allowing LLMs to search external databases or sources for relevant context before generating an answer.
+RAG is an architecture pattern for semantic search. It combines information retrieval with text generation, allowing LLMs to search external databases or sources for relevant context before generating an answer.
 
-This usually works by embedding documents into vectors, storing them in a database, and then retrieving information based on the semantic similarity to user queries.
+This usually works by breaking documents into chunks, converting those chunks into vectors, storing them in a database, and then retrieving information based on the semantic similarity to user queries.
 
-## Why should MCP servers have a RAG tool
+## Why MCP servers should have a RAG tool
 
-MCP servers provide tools that LLMs interact with to perform actions such as searching databases, calling APIs, and updating records. RAG gives LLMs a better context by searching the knowledge base semantically. MCP gives LLMs capabilities by connecting them to a system.
+MCP servers provide tools that LLMs interact with to perform actions such as searching databases, calling APIs, and updating records. RAG provides LLMs with additional context by semantically searching the knowledge base. MCP gives LLMs capabilities by connecting them to a system.
 
-For example, a RAG tool might power your enterprise AI chatbot to answer questions from your user guides and documentation. In contrast, MCP tools can help customer support agents retrieve a [user's license information](/mcp/using-mcp/use-cases/customer-support) or create a new support ticket. In that example, RAG handles knowledge retrieval, and MCP handles your system actions.
+For example, a RAG tool could enable your enterprise AI chatbot to answer questions from your user guides and documentation, and MCP tools could help customer support agents retrieve a [user's license information](/mcp/using-mcp/use-cases/customer-support) or create a new support ticket. In this example, RAG handles knowledge retrieval and MCP handles your system actions.
 
 ### The problem with MCP resources
 
-MCP servers provide three primitives: tools, resources, and prompts. [MCP resources](/mcp/core-concepts/resources) are designed to give context to LLMs. These resources can be images, guides, or PDFs. For documentation search, MCP resources seem like the natural choice: expose your docs and let the LLM access them.
+MCP servers provide three primitives: tools, resources, and prompts. [MCP resources](/mcp/core-concepts/resources) are designed to give context to LLMs. These resources can be images, guides, or PDFs. MCP resources seem like the natural choice for searching documentation — you expose your docs, and the LLM accesses them.
 
-But the problem is scale. MCP resources dump the entire collection or document into the context window with no processing. A 100-page product guide will be dumped into the LLM context, potentially bloating it and immediately hitting context limits, which can cause timeouts, refusals, or hallucinations. Also, most LLM clients, such as Claude Desktop and ChatGPT, don't index resources from MCP servers due to rate limits and context window issues.
+But the problem is scale. MCP resources dump the entire collection or document into the context window with no processing. If MCP dumps a 100-page product guide in the LLM context, it risks bloating the context and immediately hitting context limits, which could cause timeouts, refusals, or hallucinations. Most LLM clients, including Claude Desktop and ChatGPT, don't index resources from MCP servers due to rate limits and context window issues.
 
-In our [MCP vs. RAG](/blog/rag-vs-mcp) blog, we compared an RAG implementation to an MCP implementation for searching Django documentation. RAG used 12,405 tokens and found the answer in 7.64 seconds. MCP used 2.4x more tokens (30,044) and took over 4x longer (33.28 seconds), but still failed to find the answer because the relevant content fell beyond the first 50 pages it could fit in the context window.
+In our [RAG vs MCP](/blog/rag-vs-mcp) blog, we compared an RAG implementation to an MCP implementation for searching Django documentation. RAG used 12,405 tokens and found the answer in 7.64 seconds. MCP used more than double that number of tokens (30,044) and took over four times longer (33.28 seconds) than RAG, but still failed to find the answer because the relevant content fell beyond the first 50 pages it could fit in the context window.
 
-### How RAG tools solve this
+### How RAG tools solve context bloating
 
-This is where RAG tools come in handy: instead of the LLM loading resources and searching them, it calls a tool with a natural-language query. The tool handles embedding, vector search, and relevance filtering, and returns only the most relevant chunks. The LLM gets precisely what it needs without managing the search infrastructure.
+This is where RAG tools come in handy. Instead of an LLM loading, managing, and searching multiple MCP resources, it can call a RAG tool with a natural language query. The tool handles embedding, vector search, and relevance filtering, and returns only the chunks most relevant to the search. The LLM gets precisely what it needs without managing the search infrastructure.
 
-RAG tools also enable features that are impossible with static resources: relevance scoring (LLMs can request more context when scores are low), metadata filtering (search for specific versions or sections), and context management (automatic token budgeting). The LLM uses a single tool with natural language instead of managing dozens of resources.
+RAG tools also enable features that don't work with static resources, including: 
 
-The diagram below shows how this architecture works in practice:
+- **Relevance scoring:** LLMs can request more context when scores are low.
+- **Metadata filtering:** LLMs can search for specific versions or sections of a resource.
+- **Context management:** You can implement automatic token budgeting.
+
+The following diagram illustrates how this architecture works in practice:
 
 ![RAG tool architecture: User queries Claude Desktop, which calls Gram's MCP server, which calls your FastAPI, which queries the RAG service and ChromaDB](./assets/illustration.png)
 
-## What inputs should be added to a RAG tool
+## RAG input parameters
 
-A well-designed RAG tool needs three types of parameters: the search query itself, result controls, and quality filters. Getting these wrong means either the LLM can't express what it needs, or it gets flooded with irrelevant results.
+A well-designed RAG tool needs three types of parameters: the search query itself, result controls, and quality filters. If an LLM uses incorrect parameters, it could fail to express what it needs or be flooded with irrelevant results.
 
 ### The query parameter
 
-The query parameter should actually be a natural language query, not a list of keywords. A RAG system uses embeddings for semantic search. The embedding models (`all-MiniLM-L6-v2`  or `text-embedding-3-small` for OpenAI) are trained on natural language sentences, not keyword lists. When a user asks, "How do I work with curved geometries in Django's GIS module?", the LLM has already parsed the intent (implementation guidance), identified the domain (Django GIS geometry handling), and understood the context (a how-to question).
+The query parameter should actually be a natural language query, not a list of keywords, because the RAG system uses embeddings for semantic search, and the embedding models (`all-MiniLM-L6-v2`  or `text-embedding-3-small` for OpenAI) are trained on natural language sentences, not keyword lists. When a user asks, *"How do I work with curved geometries in Django's GIS module?"* the LLM immediately parses the intent (implementation guidance), identifies the domain (Django GIS geometry handling), and understands the context (a how-to question).
 
-Forcing the LLM to translate that into structured keywords like `["django", "gis", "curve"]` with filters `{"type": "tutorial"}` throws away semantic understanding. The LLM must decide which words are keywords versus context, map natural language to your filter taxonomy, and lose the semantic relationships that make embeddings work. This gives you worse search results and wastes tokens.
+Forcing the LLM to translate the natural language prompt into structured keywords like `["django", "gis", "curve"]` with filters like `{"type": "tutorial"}` throws away semantic understanding. The LLM would have to decide which words were keywords and which were context, map natural language to your filter taxonomy, and lose the semantic relationships that make embeddings work. This would give you worse search results and waste tokens.
 
-### Result count control
+### The result count control
 
-LLMs understand and manage their context windows. In the tool parameters, let the LLM specify how many results it needs. Cap results at 10 to prevent context overflow. Make this parameter optional with a documented default (3 results work well).
+LLMs understand and manage their context windows. In the tool parameters, let the LLM specify how many results it needs. Cap results at `10` to prevent context overflow. Make this parameter optional with a documented default (a default of `3` results works well).
 
 ### Quality filtering
 
 Not all search results are equally relevant, so you should allow the LLM to filter by quality.
 
-For example, when you query a vector database like [ChromaDB](https://docs.trychroma.com/docs/overview/getting-started?lang=typescript#next-steps), if configured it can return results ranked by cosine similarity, a score measuring how close the query embedding is to each document embedding. A score of 1.0 means identical semantic meaning, 0.5 means somewhat related, and 0.0 means unrelated.
+For example, when you query a vector database like [ChromaDB](https://docs.trychroma.com/docs/overview/getting-started?lang=typescript#next-steps), it can (if configured) return results ranked by cosine similarity, a score measuring how close the query embedding is to each document embedding. A score of `1.0` means the query and embedding have identical semantic meanings, `0.5` means they are somewhat related, and `0.0` means they are unrelated.
 
 This keeps low-quality results out of the LLM's context window entirely. When Claude asks for `min_score=0.7`, the RAG tool enforces this at retrieval time and filters out anything below that threshold.
 
-The LLM uses these scores to adjust its strategy. If it gets back two results with scores of 0.72 and 0.71, it knows the match is marginal and might lower the threshold to `min_score=0.6` for a broader search. If it gets 10 results all above 0.9, it knows the search is highly targeted.
+The LLM uses these scores to adjust its strategy. If it receives two results with scores of `0.72` and `0.71`, it knows the match is marginal, and it may lower the threshold to `min_score=0.6` for a broader search. If it gets ten results, all above `0.9`, it knows the search is highly targeted.
 
 ## How to design a RAG tool
 
-If you're exposing RAG capabilities via multiple endpoints, use a single endpoint instead. If you have numerous guides or documentation sets to index, separate tools/endpoints are tempting. But if you're designing RAG for an enterprise with dozens of products and documentation sets, many tools exposed to the LLM can lead to a tool explosion, causing context bloating. The LLM can face decision paralysis, leading to wrong tool choices or hallucinations.
+If you're exposing RAG capabilities via multiple endpoints, rather use a single endpoint. 
 
-Instead, use one search tool with a `collection` parameter like `collection="user-guide"` or `collection="api-reference"` to specify which documentation set to search.
+When you have numerous guides or documentation sets to index, you may be tempted to use separate tools or endpoints, but if you're designing RAG for an enterprise with dozens of products and documentation sets, exposing too many tools to the LLM could result in a tool explosion and cause context bloating. The LLM may face decision paralysis, leading to incorrect tool choices or hallucinations.
+
+Instead, use a single search tool with a `collection` parameter for specifying which documentation set it should search (for example, `collection="user-guide"` or `collection="api-reference"`).
 
 ### Response format
 
-LLMs need results in a format they can immediately use. Here's what works:
+LLMs need results in a format they can immediately use, such as the following:
 
 ```json
 {
@@ -90,19 +96,14 @@ LLMs need results in a format they can immediately use. Here's what works:
 }
 ```
 
-The response format will vary depending on your case, but here are some best practices to follow:
+The response format will vary depending on your case, but you should follow these best practices:
 
-1. Flat result array: Don't nest results in complex structures because LLM iterates through them sequentially.
-
-2. Content first: Put the actual text in `content`, not `text`, `document`, or `chunk`.
-
-3. Include sources: The LLM needs to cite its sources. URLs, page numbers, or document IDs work.
-
-4. Expose scores: Let the LLM judge result quality. If all scores are below 0.6, it knows the search was weak and might rephrase the query.
-
-5. Token estimates: This is critical for context management. The LLM needs to determine if it can fit these results, along with its reasoning, in the context window. Divide the total characters by 4 for a rough estimate (works well for English documentation).
-
-6. Avoid returning too much data to the LLM.
+- **Use flat results arrays:** Don't nest results in complex structures because the LLM iterates through them sequentially.
+- **Return content first:** Put the actual text in `content`, not `text`, `document`, or `chunk`.
+- **Include sources:** The LLM needs to cite its sources. URLs, page numbers, or document IDs work.
+- **Expose scores:** Let the LLM judge result quality. If all scores are below `0.6`, it knows the search was weak and might rephrase the query.
+- **Provide token estimates:** This is critical for context management. The LLM needs to determine whether it can fit these results, along with its reasoning, in the context window. Divide the total number of characters by four for a rough estimate (this works well for English documentation).
+- **Avoid returning too much data to the LLM:**
 
    ```json
    // ❌ Bad: too much metadata
@@ -125,7 +126,7 @@ The response format will vary depending on your case, but here are some best pra
 
 ### Error responses for RAG tools
 
-When searches fail, LLMs need actionable errors. Compare these:
+When searches fail, LLMs need actionable errors. Compare the following versions of an error:
 
 ```json
 // ❌ Bad: Generic error
@@ -142,15 +143,15 @@ When searches fail, LLMs need actionable errors. Compare these:
 }
 ```
 
-The second version tells the LLM what went wrong (a typo in "Django") and echoes the query so the LLM can verify what was searched.
+The second version tells the LLM what went wrong (a typo in "Django") and echoes the query so the LLM can verify the search.
 
-## Building a Django documentation RAG MCP server
+## How to build a Django documentation RAG MCP server
 
-Let's build a Django documentation search API and expose it as an MCP tool through Gram. This example extends the RAG implementation from the RAG vs. MCP article by wrapping it in a REST API with proper input/output design for LLM consumption.
+Let's build a Django documentation search API and expose it as an MCP tool through Gram. This example extends the RAG implementation from the RAG vs MCP post by wrapping it in a REST API with the correct input/output design for LLM consumption.
 
-You can find the complete project [here](https://github.com/speakeasy-api/examples/tree/main/rag-mcp-example) in the directory called `complete`. You can clone the project and use the code in the `base` folder to follow along with the instructions below.
+You can find the complete project in the [Speakeasy Examples repository](https://github.com/speakeasy-api/examples/tree/main/rag-mcp-example), in the `complete` directory. Clone the project and use the code in the `base` folder to follow the instructions below.
 
-### Setup
+### Set up the project
 
 Clone and install the dependencies:
 
@@ -160,15 +161,15 @@ cd examples/rag-mcp-example/base
 uv sync
 ```
 
-Download the [Django 5.2.8 documentation PDF](https://app.readthedocs.org/projects/django/downloads/pdf/5.2.x/) and place it in the `base` directory as `django.pdf`. Run the indexing script to build the ChromaDB collection:
+Download the [Django 5.2.8 documentation PDF](https://app.readthedocs.org/projects/django/downloads/pdf/5.2.x/) and save it in the `base` directory as `django.pdf`. Run the indexing script to build the ChromaDB collection:
 
 ```bash
 uv run python scripts/build_rag_index.py
 ```
 
-### Defining the search interface
+### Define the search interface
 
-In the `app/main.py` file, you will first see the schemas defined.
+First, define the schemas in the `app/main.py` file:
 
 ```python
 # app/main.py
@@ -210,14 +211,14 @@ class SearchResponse(BaseModel):
     tokens_estimate: int
 ```
 
-The query accepts natural language directly. The `max_results` attribute, capped at 10, prevents context overflow, and the `min_score` defaults to 0.5 for inclusive results, allowing the LLM to raise the threshold when it needs higher confidence.
+The query accepts natural language directly. The `max_results` attribute, capped at `10`, prevents context overflow, and the `min_score` defaults to `0.5` for inclusive results, allowing the LLM to raise the threshold when it needs higher confidence.
 
-The response schema `SearchResponse`, keeps results in a flat array for easy LLM iteration. The score field lets the LLM judge quality and adjust queries. The `tokens_estimate` attribute helps with context window management, critical for preventing overflow.
+The `SearchResponse` response schema keeps results in a flat array for easy LLM iteration. The score field lets the LLM judge quality and adjust queries. The `tokens_estimate` attribute helps with context window management, critical for preventing overflow.
 
 > **Note:**
-> Token estimation divides total characters by 4 because most tokenizers average about 4 characters per token in English.
+> Token estimation divides the total number of characters by four, because most tokenizers average about four characters per token in English.
 
-### Building the RAG search logic
+### Build the RAG search logic
 
 The `RAGService` class handles the vector search:
 
@@ -267,9 +268,9 @@ class RAGService:
         return filtered_results, total_found, tokens_estimate
 ```
 
-The service retrieves `max_results * 3` candidates to ensure enough survive score filtering. ChromaDB returns distances, which are converted to 0-1 similarity scores using `1 / (1 + distance)`. Results are filtered by `min_score`, sorted by score descending, and limited to `max_results`.
+The service retrieves `max_results * 3` candidates to ensure enough candidates survive the score filtering. ChromaDB returns distances, which are converted to 0-1 similarity scores using `1 / (1 + distance)`. The results are filtered by `min_score`, sorted by score descending, and limited to `max_results`.
 
-### Wiring up the search API
+### Wire up the search API
 
 The FastAPI `/search` endpoint wires everything together:
 
@@ -321,9 +322,9 @@ async def search_documentation(request: SearchRequest):
 
 The `operation_id="search_documentation"` becomes the MCP tool name that Claude will call. The description tells the LLM what this tool does and when to use it. FastAPI handles validation and serialization automatically.
 
-### Customizing the OpenAPI document
+### Customize the OpenAPI document
 
-The MCP server will use the OpenAPI document we will host on Gram, and Gram provides an OpenAPI [extension](/docs/gram/build-mcp/advanced-tool-curation#provide-rich-context) `x-gram` that helps LLMs understand better the tool they are going to call.
+The MCP server uses an OpenAPI document that we'll host on Gram. Gram provides an OpenAPI [extension](/docs/gram/build-mcp/advanced-tool-curation#provide-rich-context) `x-gram` that helps LLMs better understand the tools they call.
 
 To customize the OpenAPI document, create a function to rewrite the attributes you want:
 
@@ -383,7 +384,7 @@ def custom_openapi():
 app.openapi = custom_openapi
 ```
 
-### Running the server
+### Run the server
 
 Add the following lines at the end of the `app/main.py` file to run the server:
 
@@ -393,47 +394,48 @@ if __name__ == "__main__":
     uvicorn.run("app.main:app", host="0.0.0.0", port=8000, reload=True)
 ```
 
-Start the server:
+Start the server with the following command:
 
 ```bash
 uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 ```
 
-### Deploying the MCP server with Gram
+### Deploy the MCP server with Gram
 
-Gram is a service that lets you create MCP servers from an OpenAPI document. Coding and building an MCP server from scratch is doable. You have tools like FastMCP to help, FastMCP cloud to host the server, and MCP SDKs to build MCP servers and expose them via HTTP streamable, for example. But at the end, you will:
+Gram is a service that lets you generate MCP servers from OpenAPI documents. You build a standard REST API, provide the OpenAPI document, and Gram handles the MCP protocol implementation, hosting, and authentication. This means you focus on implementing your endpoints and business logic – whether that's RAG search, database queries, or API operations – rather than coding the MCP server and managing the infrastructure.
 
-- Manage infrastructure: maintain and monitor a service.
-- Implement CI/CD pipelines.
-- Need to handle security, and MCP requires OAuth 2.1 for authentication, which adds complexity.
-- Gram generates MCP servers directly from your OpenAPI specification. You build a standard REST API, provide the OpenAPI document, and Gram handles the MCP protocol implementation, hosting, and authentication. This means you focus on implementing your endpoints and business logic – whether that's RAG search, database queries, or API operations – rather than coding the MCP server and managing the infrastructure.
+Coding and building an MCP server from scratch is doable. For example, you can use tools like FastMCP for development and FastMCP Cloud for hosting the server, and use MCP SDKs to build MCP servers and expose them via the Streamable HTTP transport. However, you still need to manage the infrastructure (maintaining and monitoring a service), implement CI/CD pipelines, and handle the security. MCP requires OAuth 2.1 for authentication, which adds complexity.
 
-With Gram, you will upload the OpenAPI document from the cloned project, configure the API URL using an [ngrok](https://ngrok.com/) forwarding link, create the toolsets, enable remote MCP distribution, and then install and test it in Claude Desktop.
+With Gram, you can upload the OpenAPI document from the cloned project, configure the API URL using an [ngrok](https://ngrok.com/) forwarding link, create the toolsets, enable remote MCP distribution, and then install and test it in Claude Desktop.
 
 [Sign up for Gram](https://getgram.ai) and follow these steps:
 
-- On the [**Toolsets** page](https://docs.getgram.ai/build-mcp/create-default-toolset), click on **GET STARTED** and upload the RAG API's OpenAPI document `rag-mcp-example/base/openapi.yaml`.
-
+- On the [**Toolsets** page](https://docs.getgram.ai/build-mcp/create-default-toolset), click **Get Started** and upload the RAG API OpenAPI document, `rag-mcp-example/base/openapi.yaml`.
 - Create a toolset named `Docs-Api-Rag` and add the `search_django_docs` tool.
 
   ![Gram toolset creation](./assets/gram-toolset-creation.png)
 
-- Click on the toolset to open it and on the [**Auth** tab](https://docs.getgram.ai/concepts/environments), set `DOCS_API_SERVER_URL` to the URL of your tool's API. If you're following this guide with the local RAG MCP API, expose the API with [ngrok](https://ngrok.com/) by running the `ngrok http 127.0.0.1:8000` command and use the forwarding URL to fill in the `DOCS_API_SERVER_URL` variable.
+- Click on the **Docs-Api-Rag** toolset to open it, navigate to the [**Auth** tab](https://docs.getgram.ai/concepts/environments), and set `DOCS_API_SERVER_URL` to the URL of your tool's API.
+
+    If you're following this guide with the local RAG MCP API, expose the API with [ngrok](https://ngrok.com/) by running the `ngrok http 127.0.0.1:8000` command and use the forwarding URL to fill in the `DOCS_API_SERVER_URL` variable.
+
 - In **Settings**, create a [Gram API key](https://docs.getgram.ai/concepts/api-keys).
 
-### Connecting to Claude Desktop
+### Connect to Claude Desktop
 
-In your Docs-Api-Rag toolset's MCP tab, first enable the server by clicking **ENABLE** and then clicking **ENABLE SERVER** in the modal that shows. Scroll to the **Visibility** section and set the server visibility to public. Under the **MCP Installation** section click on the **VIEW** button to be redirected to the MCP installation page details.
+In your **Docs-Api-Rag** toolset's **MCP** tab, enable the MCP server by clicking **Enable** and then clicking **Enable Server** in the modal that opens.
+
+Scroll to the **Visibility** section and set the server visibility to public. Under the **MCP Installation** section click on the **View** button to be redirected to the MCP installation page details.
 
 Copy the raw configuration details.
 
 ![Gram raw configuration](./assets/gram-raw-configuration.png)
 
-Open the Claude Desktop application, navigate to **Settings -> Developer**, and click **Edit Config**.
+Open Claude Desktop, navigate to **Settings -> Developer**, and click **Edit Config**.
 
 ![Claude Desktop edit config](./assets/claude-desktop-edit-config.png)
 
-Open the `claude_desktop_config.json` file, copy the raw configuration from Gram.
+Open the `claude_desktop_config.json` file, and paste the raw configuration you copied from Gram.
 
 ```json
 {
@@ -458,9 +460,9 @@ Open the `claude_desktop_config.json` file, copy the raw configuration from Gram
 
 ```
 
-Replace the value of `GRAM_ENVIRONMENT` with `default` or the name of the environment you are storing the environment variables, and `GRAM_KEY` with your Gram key. Save the configuration and relaunch Claude Desktop.
+Replace the value of `GRAM_ENVIRONMENT` with `default` or the name of the environment where you store the environment variables, and replace the value of `GRAM_KEY` with your Gram key. Save the configuration and relaunch Claude Desktop.
 
-### Testing with Claude
+### Test with Claude
 
 To test the RAG tool, open Claude Desktop and send the following prompt:
 
@@ -468,7 +470,7 @@ To test the RAG tool, open Claude Desktop and send the following prompt:
 Hi Claude. What's new in Django 5.2, mostly Django GIS? Are curved geometries supported?
 ```
 
-Claude will first use the MCP Rag tool to make a search and then reply.
+Claude will first use the MCP Rag tool to conduct a semantic search, then reply.
 
 ![Claude RAG search result](./assets/claude-rag-search-result.png)
 
@@ -478,15 +480,15 @@ Disable both the RAG tool and Claude's web search feature, then ask the same que
 
 ## Further exploration
 
-Now that you've built a RAG tool for documentation search, consider what else becomes possible when you combine RAG with your MCP tools or other MCP tools:
+Now that you've built a RAG tool for searching documentation, consider what else becomes possible when you combine RAG with MCP tools.
 
-- You can design a [customer support agent](/mcp/using-mcp/use-cases/customer-support) for your customer. Combine a RAG tool for your product documentation with the [Zendesk MCP](/mcp/using-mcp/mcp-server-providers/zendesk) server, for example, or any CRM tools, support tickets, and analytics. The agent learns product context from documentation and then pulls customer data to provide personalized support responses.
-- You can power a developer code assistant. Build a RAG tool for your SDK documentation and code examples, paired with MCP tools that interact with your sandbox API. The LLM searches for implementation patterns, retrieves example code, and tests it against your sandbox environment.
-- You can build an [account management](/mcp/using-mcp/use-cases/account-management) assistant for your sales team. Create a RAG tool that searches your company's sales playbooks and account management guides. Pair it with the [HubSpot MCP](/mcp/using-mcp/mcp-server-providers/hubspot) server. When a sales agent asks "update this client's status to renewal stage and log our last conversation", the LLM uses RAG to check your renewal protocols, then updates the contact record and creates the activity log in your CRM following those guidelines.
+- **Design a [customer support agent](/mcp/using-mcp/use-cases/customer-support):** Combine a RAG tool for your product documentation with the [Zendesk MCP server](/mcp/using-mcp/mcp-server-providers/zendesk) (or another MCP server with CRM tools, support tickets, and analytics). The agent learns product context from your documentation and then pulls customer data to provide personalized support responses.
+- **Power a developer code assistant:** Build a RAG tool for your SDK documentation and code examples, and pair it with MCP tools that interact with your sandbox API. The LLM searches for implementation patterns, retrieves example code, and tests it against your sandbox environment.
+- **Build an [account management](/mcp/using-mcp/use-cases/account-management) assistant for your sales team:** Create a RAG tool that searches your company's sales playbooks and account management guides, and pair it with the [HubSpot MCP](/mcp/using-mcp/mcp-server-providers/hubspot) server. When a sales agent asks the assistant to *"update this client's status to renewal stage and log our last conversation,"* the LLM uses RAG to check your renewal protocols, then updates the contact record and creates the activity log in your CRM following those guidelines.
 
 ## Final thoughts
 
-RAG and MCP are often compared as competing approaches, but they're most powerful when used together. An AI agent might use a RAG tool to search your product documentation for implementation guidance, then use other MCP tools to create tickets, update records, or query live data. The combination gives agents both knowledge and agency.
+RAG and MCP are often depicted as competing approaches, but they're most powerful when used together. An AI agent might use a RAG tool to search your product documentation for implementation guidance, then use other MCP tools to create tickets, update records, or query live data. This combination gives agents both knowledge and agency.
 
 If you're building RAG tools for MCP, check out existing implementations like [mcp-crawl4ai-rag](https://github.com/coleam00/mcp-crawl4ai-rag) and [rag-memory-mcp](https://github.com/ttommyth/rag-memory-mcp) for more patterns.
 
