--- a/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
+++ b/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
@@ -425,7 +425,7 @@ With Gram, you can upload the OpenAPI document from the cloned project, configur
 
 In your **Docs-Api-Rag** toolset's **MCP** tab, enable the MCP server by clicking **Enable** and then clicking **Enable Server** in the modal that opens.
 
-Scroll to the **Visibility** section and set the server visibility to public. Under the **MCP Installation** section click on the **View** button to be redirected to the MCP installation page details.
+Scroll to the **Visibility** section and set the server visibility to public. Under the **MCP Installation** section, click the **View** button to be redirected to the MCP installation page details.
 
 Copy the raw configuration details.
 
@@ -435,7 +435,7 @@ Open Claude Desktop, navigate to **Settings -> Developer**, and click **Edit Con
 
 ![Claude Desktop edit config](./assets/claude-desktop-edit-config.png)
 
-Open the `claude_desktop_config.json` file, and paste the raw configuration you copied from Gram.
+Claude will redirect you to its configuration file. Open `claude_desktop_config.json` and add the raw configuration you copied from Gram to the file contents:
 
 ```json
 {
