Fix typo in introduction.mdx

--- a/docs/gram/introduction.mdx
+++ b/docs/gram/introduction.mdx
@@ -27,7 +27,7 @@ const gram = new Gram().tool({
 export default gram;
 ```
 
-Use Gram to build out MCP servers for your product, power chat expereinces in your product or surface the right data to AI agents to automate workflows.
+Use Gram to build out MCP servers for your product, power chat experiences in your product or surface the right data to AI agents to automate workflows.
 
 ## Why MCP?
 
