--- a/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
+++ b/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
@@ -39,7 +39,7 @@ RAG tools also enable features that don't work with static resources, including:
 
 The following diagram illustrates how this architecture works in practice:
 
-![RAG tool architecture: User queries Claude Desktop, which calls Gram's MCP server, which calls your FastAPI, which queries the RAG service and ChromaDB](./assets/illustration.png)
+![RAG tool architecture: User queries Claude Desktop, which calls Gram's MCP server, which calls your FastAPI, which queries the RAG service and ChromaDB](/assets/mcp/tool-design/designing-rag-tools-for-llms/illustration.png)
 
 ## RAG input parameters
 
@@ -413,7 +413,7 @@ With Gram, you can upload the OpenAPI document from the cloned project, configur
 - On the [**Toolsets** page](https://docs.getgram.ai/build-mcp/create-default-toolset), click **Get Started** and upload the RAG API OpenAPI document, `rag-mcp-example/base/openapi.yaml`.
 - Create a toolset named `Docs-Api-Rag` and add the `search_django_docs` tool.
 
-  ![Gram toolset creation](./assets/gram-toolset-creation.png)
+  ![Gram toolset creation](/assets/mcp/tool-design/designing-rag-tools-for-llms/gram-toolset-creation.png)
 
 - Click on the **Docs-Api-Rag** toolset to open it, navigate to the [**Auth** tab](https://docs.getgram.ai/concepts/environments), and set `DOCS_API_SERVER_URL` to the URL of your tool's API.
 
@@ -429,11 +429,11 @@ Scroll to the **Visibility** section and set the server visibility to public. Un
 
 Copy the raw configuration details.
 
-![Gram raw configuration](./assets/gram-raw-configuration.png)
+![Gram raw configuration](/assets/mcp/tool-design/designing-rag-tools-for-llms/gram-raw-configuration.png)
 
 Open Claude Desktop, navigate to **Settings -> Developer**, and click **Edit Config**.
 
-![Claude Desktop edit config](./assets/claude-desktop-edit-config.png)
+![Claude Desktop edit config](/assets/mcp/tool-design/designing-rag-tools-for-llms/claude-desktop-edit-config.png)
 
 Claude will redirect you to its configuration file. Open `claude_desktop_config.json` and add the raw configuration you copied from Gram to the file contents:
 
@@ -472,11 +472,11 @@ Hi Claude. What's new in Django 5.2, mostly Django GIS? Are curved geometries su
 
 Claude will first use the MCP Rag tool to conduct a semantic search, then reply.
 
-![Claude RAG search result](./assets/claude-rag-search-result.png)
+![Claude RAG search result](/assets/mcp/tool-design/designing-rag-tools-for-llms/claude-rag-search-result.png)
 
 Disable both the RAG tool and Claude's web search feature, then ask the same question. Claude will indicate uncertainty about Django 5.2 GIS features because the information is beyond its January 2025 training cutoff, and it has no way to retrieve current documentation.
 
-![Claude knowledge cutoff response](./assets/claude-knowledge-cutoff-response.png)
+![Claude knowledge cutoff response](/assets/mcp/tool-design/designing-rag-tools-for-llms/claude-knowledge-cutoff-response.png)
 
 ## Further exploration
 
