updated tags example

--- a/openapi/frameworks/laravel.mdx
+++ b/openapi/frameworks/laravel.mdx
@@ -46,11 +46,9 @@ info:
   description: ''
   version: 1.0.0
 servers:
-  -
-    url: 'http://localhost'
+  - url: 'http://localhost'
 tags:
-  -
-    name: Endpoints
+  - name: Endpoints
     description: ''
 paths:
   /api/health:
@@ -516,36 +514,22 @@ With descriptions covered, let's properly document the stuff these descriptions 
 
 ### Adding tags
 
-In OpenAPI, `tags` are used to group related operations together. Typically, a good way to use tags is to have one tag per "resource" and then associate all the relevant operations that access and modify that resource together. We'll add a group annotation to the top of the controller.
+In OpenAPI, `tags` are used to group related operations together. Typically, a
+good way to use tags is to have one tag per "resource" and then associate all
+the relevant operations that access and modify that resource together. 
 
 ```php
-// !focus(1)
-#[Group(name: 'Races', description: 'A series of endpoints that allow programatic access to managing F1 races.', authenticated: true)]
-final readonly class IndexController
+use Knuckles\Scribe\Attributes\{Authenticated, Group, BodyParam, QueryParam};
+
+#[Group(name: 'Races', description: 'A series of endpoints that allow programmatic access to managing F1 races.')]
+class RaceController extends Controller
 {
-    public function __construct(
-        private AuthManager $auth,
-        private RaceRepository $repository,
-    ) {
-    }
-
-    #[Authenticated]
-    #[ResponseFromApiResource(RaceResource::class, Race::class, collection: true)]
-    #[Endpoint(title: 'Browse Races', description: 'Browse through the F1 races for the season.')]
-    public function __invoke(Request $request): CollectionResponse
-    {
-        $races = $this->repository->forSeason(
-            season: $request->query('season', date('Y')),
-        );
-
-        return new CollectionResponse(
-            data: RaceResource::collection(
-                resource: $races->paginate(),
-            ),
-        );
-    }
-}
+  // ...
 ```
+
+Now instead of seeing `tags: [Endpoints]` in this controllers endpoints, the tag will be `Races`, and the description will be included in the OpenAPI document as a tag description. 
+
+**Learn more about [OpenAPI tags](/openapi/tags).**
 
 ## Documenting parameters
 
